1.22.x-sezero (changes made by sezero)
---
- Added nasm versions of x86 asm sources.
- Open Watcom and MSVC6 compatibility.
- New --enable-allquiet option to completely silence the library.
- Minor warning fixes.
- Minor updates to CFLAGS. Updates to configury.

1.22.x-sezero (backports)
---
- Make mpg123_resize_string() terminate the string if shrinking (fill now
  limited to new size).
- Reset the flag for having a frame to decode before trying to
  parse a new one. This prevents very unkind behaviour (crashes)
  when combinging mpg123_scan() with decoding later on for damaged
  streams that have a mixture of different MPEG versions.
- Fix an out-of-bounds read of maximal two bytes for truncated RVA2 frames
  (oss-fuzz-bug 15975). The earlier fix around the same location needed
  one thought more. Actually, another though was needed, oss-fuzz-bug 16009
  documents the incomplete fix.
- Fix an invalid write of one zero byte for empty ID3v2 frames that demand
  de-unsyncing (oss-fuzz-bug 16050).
- Fix out-of-bounds reads in ID3 parser for unsynced frames.
  (oss-fuzz-bug 15852)
- Fix out-of-bounds read for RVA2 frames with non-delimited identifier.
  (oss-fuzz-bug 15852)
- Fix implementation-defined parsing of RVA2 values. (oss-fuzz-bug 15862)
- Correct preprocessor syntax in mangle.h, no #error in a #define line.
  (bug 273, thanks to nmlgc).
- Fix compute_bpf() for free format streams (needed to estimate track
  length and working fuzzy seeking in absence of an Info tag).
- Accept changing mode extension bits when looking for next header for
  detecting free-format streams (bug 257).
- Proper fix for the xrpnt overflow problems by correctly
  initialising certain tables for MPEG 2.x layer III. The checks that
  catch the resulting overflow are still in place, but likely superfluous
  now. Note that this means certain valid files would have been misdecoded
  before, if anyone actually produced them. Thanks to Robert Hegemann for
  the fix!